acceptation: implement appicant's side

--- a/gccsite/gcc/templates/gcc/application/summary.html
+++ b/gccsite/gcc/templates/gcc/application/summary.html
@@ -1,7 +1,6 @@
 {% extends "gcc/base.html" %}
-{% load static %}
-{% load utils %}
-{% load i18n staticfiles %}
+{% load i18n static staticfiles %}
+{% load application_status utils %}
 
 {% block head %}
   <link rel="stylesheet" href="{% static 'vendor/bootstrap/dist/css/bootstrap.min.css' %}" />
@@ -58,13 +57,7 @@
         {% if not has_applied_to_current %}
         <div class="panel panel-default">
             <div class="panel-heading">
-                <table class="panel-title">
-                    <tbody>
-                        <tr>
                             <td width="100%">{% trans "Edition" %} {{current_edition}}</td>
-                        </tr>
-                    </tbody>
-                </table>
             </div>
             <div class="panel-body">
                 <table class="panel-title">
@@ -91,79 +84,78 @@
                     <tbody>
                         <tr>
                             <td width="100%">Edition {{applicant.edition}}</td>
-                            {% if applicant.edition.subscription_is_open and applicant.status == 0 %}
-                            <td class="text-right">
-                                <a  href="{% url 'gcc:application_form' edition=applicant.edition %}" class="btn btn-default btn-xs">
+                            {% if applicant.edition.subscription_is_open %}
+                              {% if applicant.status == 0 %}
+                                <td class="text-right">
+                                  <a  href="{% url 'gcc:application_form' edition=applicant.edition %}" class="btn btn-default btn-xs">
                                     <i class="fa fa-pencil"></i> {% trans "Edit application" %}
-                                </a>
-                            </td>
+                                  </a>
+                                </td>
+                              {% else %}
+                                <span class="badge {{ applicant.status|status_badge }} pull-right">
+                                  {{ applicant.get_status_display}}
+                                </span>
+                              {% endif %}
                             {% endif %}
                         </tr>
                     </tbody>
                 </table>
             </div>
             <div class="panel-body">
+                <h3>{% trans "My informations" %}</h3>
                 {% if not applicant.has_complete_application %}
-                <div class="alert alert-warning" role="alert">
+                  <div class="alert alert-warning" role="alert">
                     {% trans "You are missing some key information, you won't be able to validate your application !" %}
-                </div>
-                {% endif%}
+                  </div>
+                {% endif %}
                 <ul class="nav nav-stacked fa-ul">
-                    {% for answer in applicant.answers.all %}
+                  {% for answer in applicant.answers.all %}
                     {% if applicant.edition == answer.applicant.edition %}
-                    <li> <strong> {{answer.question}} </strong> </li>
-                    <li> {{ answer }} </li>
+                      <li> <strong> {{answer.question}} </strong> </li>
+                      <li>{{ answer }}</li>
                     {% endif %}
-                    {% endfor %}
-                    <ol class="event-wish-list">
-                        {% for event in applicant.list_of_assignation_wishes %}
-                        <li> {{event.short_description}} </li>
-                        {% endfor %}
-                    </ol>
+                  {% endfor %}
                 </ul>
-                <br>
-                {% if applicant.status == 0 %}
-                <td width="100%"><span class="badge badge-warning">{% trans "Incomplete" %} </span></td>
-                {% if applicant.edition.subscription_is_open %}
-                    <td class="text-right">
-                        <a  href="{% url 'gcc:application_validation' pk=user.id edition=applicant.edition %}" class="btn btn-default btn-xs">
-                            <i class="fa fa-save"></i> {% trans "Validate application" %}
+
+                <h3>{% trans "My applications" %}</h3>
+                <ol>
+                  {% for wish in applicant.eventwish_set.all %}
+                    <li>
+                      {{ wish.event.short_description }}
+                      <span class="badge {{ wish.status|status_badge }} pull-right">
+                        {{ wish.get_status_display}}
+                      </span>
+                      {% if wish.status == 4 %}
+                        <a class="pull-right" href="{% url 'gcc:confirm' wish=wish.pk%}" style="margin-right: 10px;">
+                          <strong>
+                            {% trans "Confirm my venue" %}
+                          </strong>
                         </a>
-                    </td>
-                {% endif %}
-                {% endif %}
-                {% if applicant.status == 1 %}
-                <span class="badge badge-warning">{% trans "Pending" %} </span>
-                {% endif %}
-                {% if applicant.status == 2 %}
-                <span class="badge badge-danger">{% trans "Rejected" %} </span>
-                {% endif %}
-                {% if applicant.status == 3 %}
-                <span class="badge badge-success">{% trans "Selected" %} </span>
-                <p> {% trans "You will soon receive your assignation." %} </p>
-                {% endif %}
-                {% if applicant.status == 4 %}
-                <span class="badge badge-warning">{% trans "Accepted" %} </span>
-                <p> {% trans "You have been assigned to:" %} </p>
-                <ul>
-                    {% for event in applicant.list_of_assignation_event %}
-                    <li> {{event.short_description}} </li>
-                    {% endfor %}
-                </ul>
-                <p> {% trans "Please confirm your venue." %} </p>
-                {% endif %}
-                {% if applicant.status == 5 %}
-                <span class="badge badge-success">{% trans "Confirmed" %} </span>
-                <p> {% trans "You have been assigned to:" %} </p>
-                <ul>
-                    {% for event in applicant.list_of_assignation_event %}
-                    <li> {{event.short_description}} </li>
-                    {% endfor %}
-                </ul>
-                <p>{% trans "And you confirmed your venue, see you there!" %} </p>
-                {% endif %}
-            </div>
-        </div>
+                      {% endif %}
+                    </li>
+                  {% endfor %}
+                </ol>
+
+                <h3>{% trans "Status" %}</h3>
+                <p>
+                  {% if applicant.status == 0 %}
+                    {% if applicant.edition.subscription_is_open %}
+                      {% trans "Please validate your applications." %}
+                    {% else %}
+                      {% trans "Subscriptions are not opened yet for this year." %}
+                    {% endif %}
+                  {% elif applicant.status == 3 %}
+                    {% trans "You will soon receive your assignation." %}
+                  {% elif applicant.status == 4 %}
+                    {% trans "You have been assigned to an event, please confirm your venue." %}
+                  {% elif applicant.status == 5 %}
+                    {% trans "Your venue has been confirmed!" %}
+                  {% else %}
+                    {% trans "Please wait while we review and update your application!" %}
+                  {% endif %}
+                </p>
+              </div>
+          </div>
         {% endfor %}
     </div>
 </div>
