--- a/gccsite/gcc/templates/gcc/editions.html
+++ b/gccsite/gcc/templates/gcc/editions.html
@@ -22,9 +22,13 @@
         {% endblocktrans %}
       </p>
       {% if user.is_authenticated %}
-        <a href="/application/form/2019" class="btn btn-primary btn-lg">{% trans 'Register' %}</a>
+        <a href="/application/form/2019" class="btn btn-primary btn-lg">
+          {% trans 'Apply' %}
+        </a>
       {% else %}
-        <a href="{% url 'oauth:autologin' %}" class="btn btn-primary btn-lg">{% trans 'Sign in' %}</a>
+        <a href="{% url 'oauth:autologin' %}" class="btn btn-primary btn-lg">
+          {% trans 'Sign in and apply' %}
+        </a>
       {% endif %}
     </div>
   </div>
