--- a/gccsite/gcc/templates/gcc/registration_widget.html
+++ b/gccsite/gcc/templates/gcc/registration_widget.html
@@ -8,7 +8,8 @@
       {% for event in events %}
       <tr>
         <td>
-          <strong>{{ event.center }}</strong>, {% trans 'the week of' %} <em>{{ event.event_start|date:"DATE_FORMAT" }}</em>
+          <strong>{{ event.center }}</strong>, {% trans 'the week of' %}
+          <em>{{ event.event_start|date:"DATE_FORMAT" }}</em>
         </td>
       </tr>
     {% endfor %}
@@ -16,9 +17,9 @@
   </table>
   <p>
     {% if user.is_authenticated %}
-      <a href="/application/form/{{last_edition}}" class="btn btn-primary btn-lg btn-block">{% trans 'Register' %}</a>
+      <a href="/application/form/{{last_edition}}" class="btn btn-primary btn-lg btn-block">{% trans 'Apply' %}</a>
     {% else %}
-      <a href="{% url 'oauth:autologin' %}" class="btn btn-primary btn-lg btn-block">{% trans 'Sign in' %}</a>
+      <a href="{% url 'oauth:autologin' %}" class="btn btn-primary btn-lg btn-block">{% trans 'Sign in and apply' %}</a>
     {% endif %}
   </p>
 </section>
