--- a/gccsite/gcc/templates/gcc/mails/accept.body.text.html
+++ b/gccsite/gcc/templates/gcc/mails/accept.body.text.html
@@ -4,32 +4,28 @@ Après étude des candidatures, nous avons le plaisir de t’informer que tu as 
 sélectionnée pour participer au stage « Girls Can Code! » à {{event.center}},
 du {{event.event_begin}} au {{event.event_end}}!
 
-Il est très important que tu nous confirme ou que tu nous confirmes ta venue en
-cliquant sur le bouton `confirmer` sur la page suivante: {{TODO: URL}}.
+Tu peux maintenant confirmer ta venue au stage depuis le site: {{confirm_url}}.
 
 Nous te donnons donc rendez-vous le {{event.date_begin}} à 10h à Epita :
 
 {{event.center.address}}
 
 N’oublie pas que l’hébergement n’est pas pris en charge par l’association
-Prologin. Si tu le souhaites, nous pouvons te mettre en contact avec les autres
-participantes du stage afin de réserver une chambre d’hôtel en commun.
-
-Les petits-déjeuners, déjeuners sont en revanche pris en charge ainsi que le
-dîner de fin de stage.
+Prologin. Les petits-déjeuners, déjeuners sont en revanche pris en charge ainsi
+que le dîner à la fin du stage.
 
 Tu trouveras, en pièce-jointe de ce mail, des documents à remplir et à ramener
-le premier jour du stage et nous t’enverrons bientôt un planning des activités.
+le premier jour ainsi que le planning des activités.
+
 En plus de la fiche sanitaire à apporter, si tu as des allergies ou
 restrictions alimentaire, il est important que tu nous le précise pour que nous
 fassions en sorte que tout se passe bien !
 
-Merci de confirmer ton inscription ou de nous prévenir en cas de désistement en
-répondant à cet email.
-
 En attendant le stage tu peux aller sur http://france-ioi.org/ pour découvrir,
 t’entraîner et t’améliorer avant le stage.
 
+Si tu as la moindre question n’hésite pas à nous écrire à info@prologin.org.
+
 Cordialement,
--- 
+--
 L'équipe Prologin
