--- a/gccsite/gcc/templates/gcc/mails/accept.body.text.html
+++ b/gccsite/gcc/templates/gcc/mails/accept.body.text.html
@@ -2,11 +2,13 @@ Bonjour {{applicant.user.first_name}} {{applicant.user.last_name}},
 
 Après étude des candidatures, nous avons le plaisir de t’informer que tu as été
 sélectionnée pour participer au stage « Girls Can Code! » à {{event.center}},
-du {{event.event_begin}} au {{event.event_end}}!
+du {{event.event_start}} au {{event.event_end}}!
 
-Tu peux maintenant confirmer ta venue au stage depuis le site: {{confirm_url}}.
+Tu peux maintenant confirmer ta venue au stage depuis le site:
+{{confirm_url}}
 
-Nous te donnons donc rendez-vous le {{event.date_begin}} à 10h à Epita :
+Nous te donnons donc rendez-vous le {{event.date_begin}} à 10h à cette addresse
+:
 
 {{event.center.address}}
 
@@ -26,6 +28,7 @@ t’entraîner et t’améliorer avant le stage.
 
 Si tu as la moindre question n’hésite pas à nous écrire à info@prologin.org.
 
-Cordialement,
+Nous avons hâte de te voir au stage,
+
 --
 L'équipe Prologin
