accept mail: fix date

--- a/gccsite/gcc/templates/gcc/mails/accept.body.text.html
+++ b/gccsite/gcc/templates/gcc/mails/accept.body.text.html
@@ -7,7 +7,7 @@ du {{event.event_start|date:"l j F"}} au {{event.event_end|date:"l j F"}}!
 Tu peux maintenant confirmer ta venue au stage depuis le site:
 {{confirm_url}}
 
-Nous te donnons donc rendez-vous le {{event.date_start|date:"l j F"}} à 11h à
+Nous te donnons donc rendez-vous le {{event.event_start|date:"l j F"}} à 11h à
 {{event.center.name}}:
 
 {{event.center.address}}
