homepage: add all news button

--- a/gccsite/gcc/templates/gcc/index.html
+++ b/gccsite/gcc/templates/gcc/index.html
@@ -67,6 +67,7 @@
 
       <div class="col-sm-9">
       <h2>{% trans "Latest news" %}</h2>
+        <ul class="clearfix nav text-center"><li><a href="{% url 'zinnia:entry_archive_index' %}"><i class="fa fa-newspaper-o"></i> {% trans "Browse all news" %}</a></li></ul>
 
         {% for article in articles %}
         <section class="clearfix news-entry">
@@ -103,6 +104,8 @@
         </section>
 
         {% endfor %}
+
+        <ul class="clearfix nav text-center"><li><a href="{% url 'zinnia:entry_archive_index' %}"><i class="fa fa-newspaper-o"></i> {% trans "Browse all news" %}</a></li></ul>
 
         <h2>{% trans 'Get updated!' %}</h2>
         <p>
