--- a/gccsite/gcc/templates/gcc/application/review.html
+++ b/gccsite/gcc/templates/gcc/application/review.html
@@ -1,4 +1,5 @@
 {% extends "gcc/base.html" %}
+{% load humanize %}
 {% load static %}
 {% load i18n rules %}
 
@@ -43,89 +44,95 @@
           </tr>
         </thead>
         <tbody>
-          {% for applicant in applicants %}
-            <tr class="applicant-head" id="applicant-{{applicant.pk}}">
-              <td>
-                <strong>
+          {% for order, applicants in grouped_applicants %}
+            <tr>
+              <th colspan="4">
+                {% blocktrans with order=order|ordinal %}Candidates with event
+                as {{order}} choice {% endblocktrans %}
+              </th>
+            </tr>
+            {% for applicant in applicants %}
+              <tr class="applicant-head" id="applicant-{{applicant.pk}}">
+                <td>
                   <span class="first-name">{{applicant.user.first_name}}</span>
                   <span class="last-name">{{applicant.user.last_name}}</span>
-                </strong>
-              </td>
-              <td>
-                {% if applicant.user.participations_count == 0 %}
-                  No
-                {% else %}
-                  {{ applicant.user.participations_count }} participations
-                {% endif %}
-              </td>
-              <td>
-                {% for label in labels %}
-                  <span class="remove-label label label-default label-xs" for-applicant="{{applicant.pk}}" for-label="{{label.pk}}" for-event="{{event.pk}}" {% if label not in applicant.labels.all %}style="display: none;"{% endif %}>{{label}}</span>
-                {% endfor %}
-              </td>
-              <td class="applicant-status">{{ applicant.get_status_display }}</td>
-            </tr>
-            <tr style="display: none">
-              <td colspan="4">
-                <div class="row">
-                  <div class="col-md-6">
-                    <h3>{% trans "Profile of" %} {{applicant.user.first_name}} {{applicant.user.last_name}}</h3>
-                    <dl class="dl-horizontal">
-                      <dt>{% trans 'login/nickname' %}</dt>
-                      <dd>{{applicant.user.username}}</dd>
-                      <dt>{% trans 'email' %}</dt>
-                      <dd>{{applicant.user.email}}</dd>
-                      <dt>{% trans 'birthday' %}</dt>
-                      <dd>{{applicant.user.birthday}}</dd>
-                      <dt>{% trans 'participations' %}</dt>
-                      <dd>None</dd>
-                    </dl>
+                </td>
+                <td>
+                  {% if applicant.user.participations_count == 0 %}
+                  {% trans 'None' %}
+                  {% else %}
+                    {{ applicant.user.participations_count }} participations
+                  {% endif %}
+                </td>
+                <td>
+                  {% for label in labels %}
+                    <span class="remove-label label label-default label-xs" for-applicant="{{applicant.pk}}" for-label="{{label.pk}}" for-event="{{event.pk}}" {% if label not in applicant.labels.all %}style="display: none;"{% endif %}>{{label}}</span>
+                  {% endfor %}
+                </td>
+                <td class="applicant-status">{{ applicant.get_status_display }}</td>
+              </tr>
+              <tr style="display: none">
+                <td colspan="4">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <h3>{% trans "Profile of" %} {{applicant.user.first_name}} {{applicant.user.last_name}}</h3>
+                      <dl class="dl-horizontal">
+                        <dt>{% trans 'login/nickname' %}</dt>
+                        <dd>{{applicant.user.username}}</dd>
+                        <dt>{% trans 'email' %}</dt>
+                        <dd>{{applicant.user.email}}</dd>
+                        <dt>{% trans 'birthday' %}</dt>
+                        <dd>{{applicant.user.birthday}}</dd>
+                        <dt>{% trans 'participations' %}</dt>
+                        <dd>None</dd>
+                      </dl>
+                    </div>
+                    <div class="col-md-6">
+                      <ul class="list-group">
+                        {% for wish in applicant.eventwish_set.all %}
+                        <li id="wish-{{wish.pk}}" class="list-group-item {% if wish.event == event %} highlighted {% endif %}">
+                            {% comment %} Status badges {% endcomment %}
+                            <span status="0" class="badge badge-warning" {% if wish.status != 0 %}style="display: none;"{% endif %}>{% trans 'incomplete' %}</span>
+                            <span status="1" class="badge badge-default" {% if wish.status != 1 %}style="display: none;"{% endif %}>{% trans 'pending' %}</span>
+                            <span status="2" class="badge badge-danger" {% if wish.status != 2 %}style="display: none;"{% endif %}>{% trans 'rejected' %}</span>
+                            <span status="3" class="badge badge-success" {% if wish.status != 3 %}style="display: none;"{% endif %}>{% trans 'selected' %}</span>
+                            <span status="4" class="badge badge-warning" {% if wish.status != 4 %}style="display: none;"{% endif %}>{% trans 'accepted' %}</span>
+                            <span status="5" class="badge badge-success" {% if wish.status != 5 %}style="display: none;"{% endif %}>{% trans 'confirmed' %}</span>
+
+                            {% has_perm 'gcc:can_accept_wish' request.user wish as can_accept %}
+                            {% if can_accept %}
+                              <span class="wish-actions">
+                                <span class="update-wish" new-status="3" for-wish="{{wish.pk}}" {% if wish.status != 1 %}style="display: none;"{% endif %}>{% trans 'select' %}</span>
+                                <span class="update-wish" new-status="2" for-wish="{{wish.pk}}" {% if wish.status != 1 %}style="display: none;"{% endif %}>{% trans 'reject' %}</span>
+                                <span class="update-wish" new-status="1" for-wish="{{wish.pk}}" {% if wish.status != 2 and wish.status != 3 %}style="display: none;"{% endif %}>{% trans 'cancel' %}</span>
+                              </span>
+                            {% endif %}
+
+                            <h4 class="list-group-item-heading">{{wish.order}}. {{wish.event.center}}</h4>
+                            <p class="list-group-item-text">{{wish.event.event_start}}</p>
+                          </li>
+                        {% endfor %}
+                      </ul>
+                    </div>
                   </div>
-                  <div class="col-md-6">
-                    <ul class="list-group">
-                      {% for wish in applicant.eventwish_set.all %}
-                      <li id="wish-{{wish.pk}}" class="list-group-item {% if wish.event == event %} highlighted {% endif %}">
-                          {% comment %} Status badges {% endcomment %}
-                          <span status="0" class="badge badge-warning" {% if wish.status != 0 %}style="display: none;"{% endif %}>{% trans 'incomplete' %}</span>
-                          <span status="1" class="badge badge-default" {% if wish.status != 1 %}style="display: none;"{% endif %}>{% trans 'pending' %}</span>
-                          <span status="2" class="badge badge-danger" {% if wish.status != 2 %}style="display: none;"{% endif %}>{% trans 'rejected' %}</span>
-                          <span status="3" class="badge badge-success" {% if wish.status != 3 %}style="display: none;"{% endif %}>{% trans 'selected' %}</span>
-                          <span status="4" class="badge badge-warning" {% if wish.status != 4 %}style="display: none;"{% endif %}>{% trans 'accepted' %}</span>
-                          <span status="5" class="badge badge-success" {% if wish.status != 5 %}style="display: none;"{% endif %}>{% trans 'confirmed' %}</span>
-
-                          {% has_perm 'gcc:can_accept_wish' request.user wish as can_accept %}
-                          {% if can_accept %}
-                            <span class="wish-actions">
-                              <span class="update-wish" new-status="3" for-wish="{{wish.pk}}" {% if wish.status != 1 %}style="display: none;"{% endif %}>{% trans 'select' %}</span>
-                              <span class="update-wish" new-status="2" for-wish="{{wish.pk}}" {% if wish.status != 1 %}style="display: none;"{% endif %}>{% trans 'reject' %}</span>
-                              <span class="update-wish" new-status="1" for-wish="{{wish.pk}}" {% if wish.status != 2 and wish.status != 3 %}style="display: none;"{% endif %}>{% trans 'cancel' %}</span>
-                            </span>
-                          {% endif %}
-
-                          <h4 class="list-group-item-heading">{{wish.order}}. {{wish.event.center}}</h4>
-                          <p class="list-group-item-text">{{wish.event.event_start}}</p>
-                        </li>
+                  <div>
+                    <h3>Form</h3>
+                    <dl class="dl-vertical">
+                      {% for answer in applicant.answers.all %}
+                       <dt>{{answer.question}}</dd>
+                       <dd>{{answer}}</dt>
                       {% endfor %}
-                    </ul>
+                    </dl>
+                    <h3>
+                      Add a label:
+                      {% for label in labels %}
+                        <span class="add-label label label-default" for-applicant="{{applicant.pk}}" for-label="{{label.pk}}" for-event="{{event.pk}}" {% if label in applicant.labels.all %}style="display: none;"{% endif %}>{{label}}</span>
+                      {% endfor %}
+                    </h3>
                   </div>
-                </div>
-                <div>
-                  <h3>Form</h3>
-                  <dl class="dl-vertical">
-                    {% for answer in applicant.answers.all %}
-                     <dt>{{answer.question}}</dd>
-                     <dd>{{answer}}</dt>
-                    {% endfor %}
-                  </dl>
-                  <h3>
-                    Add a label:
-                    {% for label in labels %}
-                      <span class="add-label label label-default" for-applicant="{{applicant.pk}}" for-label="{{label.pk}}" for-event="{{event.pk}}" {% if label in applicant.labels.all %}style="display: none;"{% endif %}>{{label}}</span>
-                    {% endfor %}
-                  </h3>
-                </div>
-              </td>
-            </tr>
+                </td>
+              </tr>
+            {% endfor %}
           {% endfor %}
         </tbody>
       </table>
