editions: photos don't overlap anymore on webkit

--- a/gccsite/gcc/static/gcc/css/editions.css
+++ b/gccsite/gcc/static/gcc/css/editions.css
@@ -72,9 +72,9 @@
 
 .photos-view {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     margin: 5px -5px;
-
 }
 
 .photos-view img {
