--- a/gccsite/gcc/templates/gcc/editions.html
+++ b/gccsite/gcc/templates/gcc/editions.html
@@ -26,7 +26,7 @@
           {% trans 'Apply' %}
         </a>
       {% else %}
-        <a href="{% url 'oauth:autologin' %}" class="btn btn-primary btn-lg">
+        <a href="{% url 'proloauth_client:autologin' %}" class="btn btn-primary btn-lg">
           {% trans 'Sign in and apply' %}
         </a>
       {% endif %}
