--- a/gccsite/gcc/templates/gcc/registration_widget.html
+++ b/gccsite/gcc/templates/gcc/registration_widget.html
@@ -19,7 +19,7 @@
     {% if user.is_authenticated %}
       <a href="/application/form/{{last_edition}}" class="btn btn-primary btn-lg btn-block">{% trans 'Apply' %}</a>
     {% else %}
-      <a href="{% url 'oauth:autologin' %}" class="btn btn-primary btn-lg btn-block">{% trans 'Sign in and apply' %}</a>
+      <a href="{% url 'proloauth_client:autologin' %}" class="btn btn-primary btn-lg btn-block">{% trans 'Sign in and apply' %}</a>
     {% endif %}
   </p>
 </section>
