--- a/gccsite/gcc/templates/gcc/registration_widget.html
+++ b/gccsite/gcc/templates/gcc/registration_widget.html
@@ -2,14 +2,17 @@
 
 {% block content %}
 <section class="up-comming">
-  <h2>{% trans "Up-comming summer camps" %}</h2>
+  <h2>{% trans "Summer camps open for registration" %}</h2>
   <table class="table">
     <tbody>
       {% for event in events %}
       <tr>
         <td>
-          <strong>{{ event.center }}</strong>, {% trans 'the week of' %}
-          <em>{{ event.event_start|date:"DATE_FORMAT" }}</em>
+          <strong>{{ event.center }}</strong>,
+          <em> {% blocktrans with event.event_start|date:"DATE_FORMAT" as start and event.event_end|date:"DATE_FORMAT" as end %}
+              from the {{ start }} to the {{ end }}
+              {% endblocktrans %}
+          </em>
         </td>
       </tr>
     {% endfor %}
