gcc: learn more: add description of short summer camps

--- a/gccsite/gcc/templates/gcc/learn_more.html
+++ b/gccsite/gcc/templates/gcc/learn_more.html
@@ -11,7 +11,33 @@
 </div>
 
 <div class="container col-md-9">
-  <h2>{% trans 'Content of the Summer Camps' %}</h2>
+  <h2>{% trans 'The different types of Summer Camps' %}</h2>
+    <p>{% blocktrans %}
+        There are two types of Girls Can Code! summer camps:
+        <ul>
+            <li>Long ones, they last for a week. They were first created in 2014.</li>
+            <li>Short ones, also called "Girls Can Code! Week-end", they started in 2019.</li>
+        </ul>
+    {% endblocktrans %}</p>
+
+  <h2>{% trans 'Content and schedule of the week-end Summer Camps' %}</h2>
+  <p>{% blocktrans %}
+      They are shorter thus give less time to discover the variety of computer science but can be
+      organized more often and in various locations. They can focus on special topics but as a
+      default they are an introduction to computer science via practical sessions. The first day
+      focuses on the discovery of Python and the next on the creation of a small project on a
+      microcontroller.
+  {% endblocktrans %}</p>
+
+  <p>
+  {% blocktrans %}Here is an example schedule of a GCC! week-end, but the time of arrival and
+  departure may vary, you will be sent a precise one when accepted.{% endblocktrans %}
+    </p>
+    <a href="{% static 'gcc/img/schedule_short.svg'%}">
+      <img  style="width: 50%;" alt="Typical Schedule of a GCC! Week-end" src="{% static 'gcc/img/schedule_short.svg' %}" />
+    </a>
+
+  <h2>{% trans 'Content and schedule of the week-long Summer Camps' %}</h2>
   <p>
     {% blocktrans %}The summer camps lasts for one week and mainly consist of practical exercises.
     The week starts with an initiation to the Python programming language, and then some
@@ -19,8 +45,6 @@
     Finally, the week ends with a personal project, that can be chosen among several main topics:
     video game, robotics or microcontroller.{% endblocktrans %}
   </p>
-
-  <h2>{% trans 'The Schedule' %}</h2>
   <p>
     {% blocktrans %}Here is a typical schedule of a GCC! week. Notice that the attendees can arrive
     between 9 am and 9:30 am and can leave at between 18 pm and 19 am.{% endblocktrans %}
