--- a/gccsite/gcc/static/gcc/css/grid.css
+++ b/gccsite/gcc/static/gcc/css/grid.css
@@ -1,3 +1,6 @@
+/* Copyright (C) <2018> Association Prologin <association@prologin.org>
+ * SPDX-License-Identifier: GPL-3.0+
+ */
 .container {
     margin: 0 auto;
     max-width: 100%;
