--- a/gccsite/gcc/static/gcc/css/homepage.css
+++ b/gccsite/gcc/static/gcc/css/homepage.css
@@ -1,3 +1,6 @@
+/* Copyright (C) <2019> Association Prologin <association@prologin.org>
+ * SPDX-License-Identifier: GPL-3.0+
+ */
 .home-jumbo {
   margin-top: -20px;
   background: var(--primary);
